[tool.poetry]
name = "captum-demo"
version = "0.1.0"
description = ""
authors = ["Lucas Parzianello <lucaspar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "captum_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
captum = "^0.5.0"
torch = "^1.12.1"
numpy = "^1.23.2"
torchvision = "^0.13.1"
tqdm = "^4.64.0"
matplotlib = "^3.5.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
